fixed table overflow

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -46,6 +46,11 @@ table {
 	display: none;
 }
 
+.tableContainer {
+	width: 100%;
+	overflow-x: scroll;
+}
+
 .tab-container {
 	display: flex;
 	flex-wrap: wrap;
@@ -121,7 +126,6 @@ table {
 				border-radius: 0.25rem 0 0.25rem 0.25rem;
 			}
 		}
-
 
 		@media screen and (max-width: 575px) {
 			border-radius: 0 0 0.25rem 0.25rem;
